# rent-prediction

./: pyproject.toml
rent_prediction/: main.py
rent_prediction/data/: medianAskingRent_OneBd.csv  medianAskingRent_Studio.csv  medianAskingRent_ThreePlusBd.csv  medianAskingRent_TwoBd.csv
rent_prediction/results/: predictions_medianAskingRent_OneBd.csv  predictions_medianAskingRent_Studio.csv  predictions_medianAskingRent_ThreePlusBd.csv  predictions_medianAskingRent_TwoBd.csv
