[tool.poetry]
name = "rent-prediction"
version = "0.1.0"
description = ""
authors = ["yifei-yao <yaoyifei0@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pandas = "^2.2.3"
prophet = "^1.1.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
